--- a/src/html_modules/header.html
+++ b/src/html_modules/header.html
@@ -13,7 +13,7 @@
                 <a href="#" class="menu__link">Web Development</a>
             </li>
             <li class="menu__item">
-                <a href="#" class="menu__link">Web design</a>
+                <a href="./design.html" class="menu__link">Web design</a>
             </li>
             <li class="menu__item">
                 <a href="#" class="menu__link">Portfolio</a>
