--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,11 @@
                         <div class="hero__grid">
                             <div class="hero__card hero__card_1"><p class="hero__card-text"><b>web development</b></p></div>
                             <div class="hero__card hero__card_2"><img src="./img/main-page/hero_1.png" alt="web design" class="hero__card-img1"></div>
-                            <div class="hero__card hero__card_3"><img src="./img/main-page/videoBcg.png" alt="video" class="hero__card-img1"></div>
+                            <div class="hero__card hero__card_3">
+                                <video id="vid1" class="video-js" >
+                                    <source src="../src/video/custom.mp4">
+                                </video>
+                            </div>
                             <div class="hero__card hero__card_4"><img src="./img/main-page/hero_2.png" alt="web development" class="hero__card-img1"></div>
                             <div class="hero__card hero__card_5"><p class="hero__card-text2"><b>seo</b></p></div>
                             <div class="hero__card hero__card_6"><p class="hero__card-text3"><b>web design</b></p></div>
@@ -115,7 +119,7 @@
                             <li>Responsive, Accessible Development</li>
                             <li>WordPress Design</li>
                             <li>Landing page Design</li>
-                            <li>Agency Website Design
+                            <li>Agency Websites Design
                             </li>
                             <li>E-commerce Design</li>
                         </ul>
